Change NerdShield API to require function call to load

--- a/CoreSystems.csproj
+++ b/CoreSystems.csproj
@@ -355,6 +355,7 @@
     <Compile Include="Data\Scripts\CoreSystems\Session\SessionNetworkSupport.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="Data\Scripts\CoreSystems\Support\Api\NerdShieldAPI.cs" />
     <Compile Include="Data\Scripts\CoreSystems\Support\Api\WaterModAPI.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
